Corrected bugs on IE Styling

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -283,6 +283,7 @@ h1 {
   border-radius: 5px;
   border: none;
   align-items: center;
+  cursor: pointer;
 }
 
 .square {
